<resources>
    <string name="app_name">Saloon Partner</string>
    <string name="send_otp">Send Otp</string>
    <string name="verify">Verify</string>
    <string name="create_acc_txt">Don\'t have an BYC partner account? Create</string>
    <string name="byc_partner">BYC PARTNER</string>
    <string name="registered_phone_number">Registered Phone Number</string>
    <string name="enter_otp_txt">Enter the otp sent to your phone Number</string>
    <string name="login">LOGIN</string>
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <string name="view_and_manage_bookings">View and Manage Bookings</string>
    <string name="backviewbookingsscreen">backViewBookingsScreen</string>


    <string name="slot2">11:00AM - 12:00 AM</string>
    <string name="slot1">09:00 AM - 11:00AM</string>
    <string name="slot3">01:00 PM - 03:00 PM</string>
    <string name="slot4">03:00 PM - 05:00 PM</string>
    <string name="slot5">05:00 PM - 07:00 PM</string>
    <string name="slot6">07:00 PM - 09:00 PM</string>
    <string name="refresh_the_slots">refresh_the slots</string>
    <string name="view_bookings">View Bookings</string>
    <string name="view_schedule">View Schedule</string>
    <string name="back_logo_btn">back_logo_btn</string>
    <string name="bookings">Bookings</string>
    <string name="booking_detail">Booking Detail</string>
    <string name="booking_id">Booking Id</string>
    <string name="username">UserName</string>
    <string name="thanks_for_making_a_booking_successfull">Thanks for making a booking successfull 🎉</string>
    <string name="done">DONE ✔</string>
    <string name="reached_destination">Reached Destination!🚩</string>
    <string name="set_your_status_towards_this_booking">Set Your Status towards this Booking</string>
    <string name="on_the_way_to_destination">On the Way to Destination</string>
    <string name="payment_wallet">Payment Wallet</string>
    <string name="help_and_support">Help and Support</string>
    <string name="debited_amount_details">Debited Amount Details</string>
    <string name="credited_amount_details">Credited Amount Details</string>
    <string name="check_payments_details">Check Payments Details</string>
    <string name="credit_details">Credit Details</string>
    <string name="debit_details">Debit Details</string>

    <string name="amount">Amount </string>
    <string name="date">Date</string>
    <string name="description">Description</string>
    <string name="bank_details">Bank Details</string>
    <string name="proflie">Proflie</string>
    <string name="a_c_no">A/C No.</string>
    <string name="beneficiary_name">Beneficiary Name</string>
    <string name="bank_name">Bank Name</string>
    <string name="branch">Branch</string>
    <string name="ifsc_code">IFSC code</string>
    <string name="account_type">Account type</string>
    <string name="name">Name</string>
    <string name="byc_id">BYC Id.</string>
    <string name="address">Address</string>
    <string name="city">City</string>
    <string name="phone_number">Phone number</string>
    <string name="base_price">Base Price</string>
    <string name="phone_number_additional">Phone Number Additional</string>

</resources>