<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LoginScreen">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:background="#F30A53">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/byc_partner"
            android:textColor="@color/white"
            android:textSize="28sp"
            android:textStyle="bold" />


    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="16sp"
        android:text="@string/login"
        android:textSize="26sp"
        android:textStyle="bold" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="4dp"
        android:layout_marginRight="4dp"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/phonenNoLayt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:layout_marginLeft="14dp"
            android:layout_marginRight="14dp"

            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/phoneNoTxtEdt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/registered_phone_number"
                android:inputType="phone"
                android:maxLength="10"
                android:textAllCaps="true" />


        </com.google.android.material.textfield.TextInputLayout>

        <ProgressBar
            android:id="@+id/login_progress_bar"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="14dp"

            />


        <com.google.android.material.textfield.TextInputLayout
           android:id="@+id/otpLayt"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:layout_marginLeft="14dp"
            android:layout_marginRight="14dp"

            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/otpTxtEdt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_otp_txt"
                android:textAllCaps="true"
                android:inputType="phone"
                android:visibility="gone" />

        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/sendOtpBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="28dp"
            android:text="@string/send_otp" />

        <Button
            android:id="@+id/verifyOtpBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="28dp"
            android:text="@string/verify"
            android:visibility="gone" />

        <TextView
            android:id="@+id/createAcc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="28dp"
            android:text="@string/create_acc_txt"
            android:textColor="#085273" />


    </LinearLayout>

</LinearLayout>
