<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".payments.WalletActivity">

        <ImageView
            android:id="@+id/backWalletBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_arrow_back_24"
            android:layout_marginStart="14dp"
            android:layout_marginTop="14dp"
            android:contentDescription="@string/payment_wallet" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:text="@string/payment_wallet"
        android:textStyle="bold"
        android:textSize="22sp"
        android:textColor="@color/black"
        android:layout_marginStart="14dp"

        />



    <TextView
        android:id="@+id/availableBalanceTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:text="Available Balance ₹"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:layout_marginStart="14dp"
        />
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="10dp"
        app:cardCornerRadius="10dp"
        android:layout_marginLeft="18dp"
        android:layout_marginRight="18dp"
        android:layout_marginTop="33dp"
        android:layout_margin="10dp"
        app:cardBackgroundColor="@color/white"
        app:cardMaxElevation="12dp"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="true"
        >

   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_marginLeft="12dp"
       android:layout_marginRight="18dp"
       android:layout_marginTop="20dp"
       android:orientation="vertical"
       >
       <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/check_payments_details"
           android:layout_marginStart="4dp"
           android:textSize="20sp"
           android:textColor="@color/black"
           android:textStyle="bold"
           />
   <TextView
       android:id="@+id/creditWalletBtn"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_marginTop="18dp"
       android:layout_marginStart="4dp"
       android:textSize="18sp"
       android:textColor="@color/black"
       android:text="@string/credited_amount_details"
       />
       <TextView
           android:id="@+id/debitWalletBtn"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_marginTop="14dp"
           android:layout_marginStart="4dp"
           android:textSize="18sp"
           android:textColor="@color/black"
           android:text="@string/debited_amount_details"
           />



       <TextView
           android:id="@+id/bankDetailsBtn"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_marginTop="14dp"
           android:layout_marginStart="4dp"
           android:textSize="18sp"
           android:textColor="@color/black"
           android:text="@string/bank_details"

           />


       <TextView
           android:id="@+id/helpWalletBtn"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_marginTop="14dp"
           android:layout_marginStart="4dp"
           android:textSize="18sp"
           android:layout_marginBottom="18dp"
           android:textColor="@color/black"
           android:text="@string/help_and_support"
           />



   </LinearLayout>

    </androidx.cardview.widget.CardView>






</LinearLayout>