<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".payments.CreditDetailsActivity">

    <ImageView
        android:id="@+id/backCreditBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:layout_marginTop="14dp"
        android:contentDescription="@string/payment_wallet"
        android:src="@drawable/ic_baseline_arrow_back_24" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:layout_marginTop="18dp"
        android:text="@string/credit_details"
        android:textColor="@color/black"
        android:textSize="22sp"
        android:textStyle="bold" />




    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
       android:layout_marginTop="8dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="10dp"
        app:cardElevation="10dp"
        app:cardMaxElevation="12dp"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/booking_id"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />



            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_marginStart="14sp"
                android:layout_centerHorizontal="true"
                android:text="@string/date"

                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />



            <TextView
                android:layout_alignParentEnd="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_marginEnd="14dp"
                android:text="@string/amount"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />


        </RelativeLayout>

        <ScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:orientation="vertical"
            >
        <TextView
            android:id="@+id/creditListTxt"
            android:layout_width="match_parent"
            android:textSize="14sp"
            android:lineSpacingExtra="4dp"
            android:layout_height="wrap_content"
            android:textColor="@color/black" />

        </LinearLayout>

        </ScrollView>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>