<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".BookingDetailsActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="14dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/backBookingDetailsBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:contentDescription="@string/back_logo_btn"
            android:src="@drawable/ic_baseline_arrow_back_24" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="26dp"
            android:gravity="center"
            android:text="@string/booking_detail"
            android:textSize="22sp"
            android:textStyle="bold"

            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="22dp"
        android:layout_marginTop="18dp"
        android:layout_marginRight="22dp"
        android:background="#E9E8FA"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginTop="14dp"
                android:layout_marginBottom="12dp"
                android:text="@string/booking_id"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginTop="14dp"
                android:layout_marginBottom="12dp"
                android:text="@string/username"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginTop="14dp"
                android:layout_marginBottom="12dp"
                android:text="User Address"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginTop="14dp"
                android:layout_marginBottom="12dp"
                android:text="UserCity"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginTop="14dp"
                android:layout_marginBottom="12dp"
                android:text="User Phone"
                android:textStyle="bold" />



            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginTop="14dp"
                android:layout_marginBottom="12dp"
                android:text="Date Slot "
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginTop="14dp"
                android:layout_marginBottom="12dp"
                android:text="Time Slot "
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginTop="14dp"
                android:layout_marginBottom="12dp"
                android:text="Status  "
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginTop="14dp"
                android:layout_marginBottom="12dp"
                android:text="Price Paid  "
                android:textStyle="bold" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/bookingIdDt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginTop="14dp"

                android:layout_marginBottom="12dp"

                />

            <TextView
                android:id="@+id/userNameDt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginTop="14dp"

                android:layout_marginBottom="12dp"
             />

            <TextView
                android:id="@+id/userAddressDt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginTop="14dp"

                android:layout_marginBottom="12dp"
             />

            <TextView
                android:id="@+id/userCityDt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginTop="14dp"

                android:layout_marginBottom="12dp"
               />

            <TextView
                android:id="@+id/userPhoneDt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginTop="14dp"

                android:layout_marginBottom="12dp"
               />


            <TextView

                android:id="@+id/dateSlotDt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                android:layout_marginBottom="12dp"

                />

            <TextView
                android:id="@+id/timeSlotDt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                android:layout_marginBottom="12dp"

                />

            <TextView
                android:id="@+id/statusDt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                android:layout_marginBottom="12dp"
               />

            <TextView
                android:id="@+id/pricePaidDt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                android:layout_marginBottom="12dp"
                />


        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="22dp"
        android:layout_marginTop="18dp"
        android:layout_marginRight="22dp"
        android:background="#E9E8FA"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginTop="14dp"
            android:layout_marginBottom="12dp"
            android:text="Items "
            android:textStyle="bold" />

        <TextView
            android:id="@+id/itemsListDt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:layout_marginLeft="22dp"
            android:layout_marginBottom="12dp"
            />



    </LinearLayout>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/set_your_status_towards_this_booking"
        android:layout_marginStart="22dp"
        android:textStyle="bold"
        android:textSize="16sp"
        android:layout_marginTop="18dp"
        />

    <Button
        android:id="@+id/onTheWayBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/on_the_way_to_destination"
        android:layout_marginStart="22dp"
        android:layout_marginTop="22dp"
        />


    <Button
     android:id="@+id/reachedBtn"
     android:visibility="gone"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:text="@string/reached_destination"
     android:layout_marginStart="22dp"
     android:layout_marginTop="22dp"
     />

    <Button
        android:id="@+id/doneBtn"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/done"
        android:textColor="#81E80B"
        android:layout_marginStart="22dp"
        android:layout_marginTop="22dp"
        />

    <TextView
        android:id="@+id/thanksTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:text="@string/thanks_for_making_a_booking_successfull"
        android:layout_marginStart="22dp"
        android:textColor="#ED0F0F"
        android:layout_marginTop="12dp"
        />


</LinearLayout>