<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/my_drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:fitsSystemWindows="true"
    tools:context=".MainActivity">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:gravity="top">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12sp"
                android:layout_marginTop="14dp"
                android:gravity="center_horizontal"
                android:text="@string/app_name"
                android:textColor="@color/white"
                android:textSize="16sp" />

        </LinearLayout>

    </androidx.appcompat.widget.Toolbar>




    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="My Phone"
            android:id="@+id/phoneNoMain"
            android:textColor="@color/black"
            android:layout_marginBottom="4dp"
            />

        <Button
            android:visibility="gone"
            android:id="@+id/viewScheduleBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/view_schedule" />
        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/loadingProgressBar"
            android:visibility="visible"
            />

        <Button
            android:id="@+id/viewBookingsBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/view_bookings"
            android:visibility="gone"
            android:layout_marginTop="20dp"
            />


        <Button
            android:id="@+id/logoutBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:text="Logout" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/showDates"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="12dp"
            />

    </LinearLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_menu"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="#D8DCD6"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/nav_header"
        app:menu="@menu/menu" />



</androidx.drawerlayout.widget.DrawerLayout>